<?xml version="1.0"?>
<package>
  <name>talker</name>
  <version>0.1.0</version>
  <description>TTS and audio playback action service</description>

  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/personalrobotics/talker</url> 

  <author email="cliddick@cmu.edu">Clint Liddick</author>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>message_generation</build_depend> 
  <build_depend>actionlib</build_depend> 
  <build_depend>actionlib_msgs</build_depend> 

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>subprocess32</run_depend> <!-- pip package -->
  <run_depend>espeak</run_depend> 
</package>
