<?xml version="1.0"?>
<package format="2">
  <name>talker</name>
  <version>0.1.0</version>
  <description>TTS and audio playback action service</description>

  <maintainer email="cliddick@cmu.edu">Clint Liddick</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/personalrobotics/talker</url>
  <author email="cliddick@cmu.edu">Clint Liddick</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rospy</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>espeak</exec_depend>
</package>
